# fly-sse-example

./: Dockerfile  LICENSE  fly.toml  pyproject.toml  run.sh
fly_sse_example/: main.py
fly_sse_example/templates/: index.html
