[tool.poetry]
name = "fly-sse-example"
version = "0.1.0"
description = ""
authors = ["Brian Li <brian@brianli.com>"]
readme = "README.md"
packages = [{include = "fly_sse_example"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.2"}
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
sse-starlette = "^1.6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
